[Chore] #138 - 핀 추가 관련 UI 버그 수정

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -742,7 +742,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "형사 노트 작성하기"
+            "value" : "장소에 대한 상세정보를 추가하세요."
           }
         }
       }
@@ -766,7 +766,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "형사노트"
+            "value" : "형사 노트"
           }
         }
       }
