[Fix] #105 - 리터럴즈 파일 에러

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -1130,6 +1130,12 @@
         }
       }
     },
+    "scanLoad_failed_content" : {
+      "extractionState" : "manual"
+    },
+    "scanLoad_failed_title" : {
+      "extractionState" : "manual"
+    },
     "scanLoad_subTitle" : {
       "comment" : "스캔 로딩_서브타이틀",
       "extractionState" : "manual",
@@ -1153,6 +1159,9 @@
           }
         }
       }
+    },
+    "scanLoad_try" : {
+      "extractionState" : "manual"
     },
     "Selected Hour" : {
 
