--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -1194,7 +1194,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "잠시만 기다려 주세요,"
+            "value" : "잠시만 기다려 주세요."
           }
         }
       }
