[Feat] #136 - TrackingView에 들어가는 기본 UI 구현
What?
- 상단 영역에 들어가는 부분: TrackingView -> CCTVSelectionPanel -> CCTVSlotRow 순입니다.
- TrackingView에 연동될 TrackingNaverMapView 기본 틀만 구현

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -1301,6 +1301,18 @@
         }
       }
     },
+    "tracking_navigationTitle" : {
+      "comment" : "추적탭_상단 네비게이션 타이틀",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "CCTV 영역 선택"
+          }
+        }
+      }
+    },
     "us_ver" : {
       "comment" : "미국_버전",
       "extractionState" : "manual",
