--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -1313,6 +1313,30 @@
         }
       }
     },
+    "trackingResult_navigationTitle" : {
+      "comment" : "추적탭_검색 이후_상단 네비게이션 타이틀",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "CCTV 리스트"
+          }
+        }
+      }
+    },
+    "trackingResult_sectionTitle" : {
+      "comment" : "추적탭_검색 이후_상단 헤더 타이틀",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "반경 내 CCTV"
+          }
+        }
+      }
+    },
     "us_ver" : {
       "comment" : "미국_버전",
       "extractionState" : "manual",
