[Chore] #136 - CCTV 엠티뷰 추가

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -436,6 +436,17 @@
         }
       }
     },
+    "cctv_empty" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "확인된 CCTV 정보가 없어요."
+          }
+        }
+      }
+    },
     "cell_station" : {
       "extractionState" : "manual",
       "localizations" : {
