--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -1364,19 +1364,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "CCTV 영역 선택"
-          }
-        }
-      }
-    },
-    "trackingResult_navigationTitle" : {
-      "comment" : "추적탭_검색 이후_상단 네비게이션 타이틀",
-      "extractionState" : "manual",
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "CCTV 리스트"
+            "value" : "CCTV 캔버스"
           }
         }
       }
