[Refactor] #197 - Localizable 추가

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -1408,7 +1408,13 @@
     "데이터 추가 완료" : {
 
     },
+    "등록되지 않은 전화번호입니다." : {
+
+    },
     "메시지 본문" : {
+
+    },
+    "문자에서 주소를 추출할 수 없습니다." : {
 
     },
     "본문: ${messageBody}, 사건번호: ${caseNumber}" : {
@@ -1421,6 +1427,9 @@
           }
         }
       }
+    },
+    "본문: ${messageBody}, 피의자 추적 전화번호: ${senderPhoneNumber}" : {
+
     },
     "분석 결과가 없습니다" : {
       "extractionState" : "manual",
@@ -1447,7 +1456,19 @@
     "사진" : {
 
     },
+    "위치 저장 실패" : {
+
+    },
+    "위치 저장 완료." : {
+
+    },
     "전달된 문자 메시지에 포함된 주소를 추출하여 케이스에 저장합니다." : {
+
+    },
+    "좌표 변환 실패" : {
+
+    },
+    "피의자 추적 전화번호" : {
 
     },
     "핀 데이터 덮어쓰기" : {
