[Refactor] #196 - 차트 엠티뷰 상태 관리 추가

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -498,7 +498,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "아직 데이터가 없습니다."
+            "value" : "이 요일의 데이터가 없습니다."
           }
         }
       }
